# credit-card-transaction-data-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  profiles-docker.yml  requirements-docker.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
dagster_project/: Dockerfile  README.md  dagster.yaml  dagster.yml  pyproject.toml  setup.cfg  setup.py
dagster_project/credit_card_pipeline_dagster/: assets.py  definitions.py
dagster_project/fraud_detection_dagster/: assets.py  definitions.py
dagster_project/tests/: test_assets.py  test_project.py
dbt_project/: dbt_project.yml  packages.yml
dbt_project/models/marts/: fct_fraud_daily_summary.sql  fct_fraud_hourly_summary.sql  fct_fraud_transactions.sql  fraud_risk_scores.sql  fraud_risk_scores.sql.backup  schema.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_raw_transactions.sql  stg_transactions.sql
dbt_project/tests/: assert_daily_priority_counts_match_fact.sql  assert_fraud_rate_realistic.sql  assert_hourly_priority_counts_match_fact.sql  assert_positive_amounts.sql  assert_transaction_dates_valid.sql
docs/: NOTES.md
scripts/: download_data.py  load_to_bigquery.py  start.sh
tests/: test_data_quality.py
