# Build system configuration (PEP 517)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project metadata and runtime dependencies (PEP 621)
[project]
name = "credit-card-pipeline-dagster"
version = "0.1.0"
description = "Credit card fraud detection pipeline using Dagster and dbt"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "dagster",
    "dagster-dbt",
    "dbt-core>=1.8",
    "dbt-bigquery>=1.8",
    "pandas",
    "python-dotenv",
]

# Optional dependencies for development
[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

# Dagster CLI configuration
[tool.dagster]
module_name = "credit_card_pipeline_dagster.definitions"
code_location_name = "credit_card_pipeline_dagster"
